# vj

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  asgi.py  docker-compose.yml  entrypoint.sh  main.py  manage.py  migrate.py  models.py  pyproject.toml  requirements.txt  settings.py  urls.py  videos.sqlite3  wsgi.py
.github/workflows/: deploy_main.yml  deploy_tag.yml
api/: Dockerfile  manage.py  pyproject.toml
api/videos/: admin.py  api.py
api/videos/api/: channel.py  duration.py  language.py  video.py
api/videos/api/utils/: db.py  dictionary.py
api/videos/migrations/: 0002_alter_video_theme.py  0004_video_title.py  0006_auto_20210517_0825.py  0011_video_channel_name.py
api/vj_api/: settings.py  urls.py
api/vj_api/helpers/: json_renderer.py  word_relations.py  youtube_duration.py
frontend/: Dockerfile  README.md  biome.json  index.html  index.ts  package.json  styles.css  types.d.ts  vite.config.ts
frontend/public/: config.example.json  config.json
frontend/public/vhs/: vhs.js
frontend/public/vhs/shader-doodle/: sd-audio.js  sd-base.js  sd-node.js  sd-texture.js  sd-uniform.js  shader-doodle.js  template.js
frontend/public/vhs/shader-doodle/inputs/: DeviceOrientationManager.js
frontend/public/vhs/shader-doodle/utils/: AudioContextResume.js  arraysEqual.js  asyncGetScriptContent.js  asyncLoadTextFromUrl.js  cheapClone.js  copyArray.js  getMouseOrTouch.js
frontend/public/vhs/shader-doodle/webgl/: Attributes.js  AudioTexture.js  Extensions.js  Framebuffer.js  GeneralTexture.js  Program.js  Renderer.js  Shader.js  Surface.js  Texture.js  Uniforms.js  constants.js  createUniformString.js  resolveToy.js
frontend/services/: beat-detector.ts  microphone.ts  vhs-effects.ts  vj-api.ts  youtube-player.ts
frontend/types/: audio.ts  config.ts  youtube.ts
frontend/utils/: config.ts  helpers.ts
videos/: admin.py  api.py  apps.py  models.py  urls.py  views.py
videos/api/: channel.py  router.py  theme.py  video.py
videos/api/utils/: youtube.py
videos/migrations/: 0001_initial.py  0002_alter_video_theme.py  0003_rename_length_video_duration.py  0004_video_title.py  0005_video_thumbnail.py  0006_auto_20210517_0825.py  0007_theme_active.py  0008_auto_20210916_1026.py  0009_video_search_string.py  0010_alter_video_title.py  0012_video_language_code_video_published_at_and_more.py
videos/static/: config.json  index.js  style.css
videos/templates/: index.html
vj-api/: asgi.py  settings.py  urls.py  videos.sqlite3  wsgi.py
vj_api/: __init__.py  asgi.py  settings.py  urls.py  videos.sqlite3  wsgi.py
vj_api/helpers/: __init__.py  json_renderer.py  youtube_duration.py
