[project]
name = "vj-api"
version = "0.3.5"
description = "Provides a random YouTube video ID according to an optional given theme, and store cached YouTube IDs in a DB for later usage without depleting the YouTube API quota."
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = [
    "colorlog>=6.7.0",
    "django>=4.2.4",
    "django-ninja>=0.22.2",
    "django-cors-headers>=4.2.0",
    "gunicorn>=21.2.0",
    "orjson>=3.9.5",
    "psycopg-binary>=3.1.10",
    "psycopg>=3.1.10",
    "requests>=2.31.0",
    "sentry-sdk>=1.29.2",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.11,<3.12"
dynamic = ["classifiers", "classifiers"]
license = { text = "MIT" }

[project.urls]
homepage = "https://vj-api.adriencarpentier.com"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
ignore = ["E501"]
